# Universal-Academy-Engine

./: .env.example  .gitignore  ATLAS_STATUS.md  Dockerfile  README.md  config.py  docker-compose.multi-node.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  base_agent.py  base_worker.py  curriculum_architect_worker.py  integrity_auditor_worker.py  knowledge_cartographer_worker.py  llm_client.py  source_sentinel_worker.py  structured_outputs.py
api/: __init__.py
core/: __init__.py
database/: __init__.py  connection.py
demo/: init_databases.sql  run_demo.py
docs/: academy_framework.md  architecture.md  architecture_suggestions.md  auth_and_permissions.md  claim_federation_protocol.md  constitutional_learning_pipeline.md  constitutional_review_process.md  content_addressed_storage.md  credential_framework.md  curriculum_publishing_lifecycle.md  doctrine_sovereignty_layer.md  federation_architecture.md  federation_transport_protocol.md  governance.md  institutional_memory.md  key_management.md  knowledge_precedence_model.md  multi_node_demo.md  production_deployment.md  temporal_views.md  verification_attestation.md
tests/: __init__.py  conftest.py  test_agent_workers.py  test_agents.py  test_attestation.py  test_audit.py  test_auth.py  test_claim_ledger.py  test_competency.py  test_credentials.py  test_curriculum_engine.py  test_doctrine_sovereignty.py  test_federation.py  test_federation_transport.py  test_governance.py  test_key_management.py  test_knowledge_graph.py  test_multi_node.py  test_source_registry.py  (+2 more)
(+84 files in other folders)
